--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="root"></div>
 
   <form class="search-form">
     <input type="text" class="search" placeholder="City or State">
