Get webpack up and running successfully

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Type Ahead 👀</title>
   <link rel="stylesheet" href="style.css">
+  <script src="bundle.js"></script>
+
 </head>
 <body>
   <div id="root"></div>
@@ -15,6 +17,6 @@
       <li>or a state</li>
     </ul>
   </form>
-<script src="./form.jsx"></script>
+
 </body>
 </html>
